# Web-Application-for-Blogs

./: LICENSE
blog/: .gitignore  auth.py  config.py  database.py  email_utils.py  main.py  models.py  populate_db.py  pyproject.toml  schemas.py  snippet.py
blog/alembic/: env.py
blog/alembic/versions/: 28ee848aa5c3_add_likes_to_posts.py
blog/backend/: auth.py  config.py  database.py  email_utils.py  enums.py  image_utils.py  main.py  models.py  populate_db.py  pyproject.toml  schemas.py
blog/backend/alembic/: env.py
blog/backend/alembic/versions/: 28ee848aa5c3_add_likes_to_posts.py  2a3972663656_add_comments_categories_and_tags.py  74f71067bbbc_initial_schema.py  79995042a932_add_cascade_delete_to_post_tag_foreign_.py  a2918d6dc997_add_replies_to_comments.py
blog/backend/api/: categories.py  comments.py  dependencies.py  posts.py  tags.py  users.py
blog/backend/models/: __init_.py  category.py  comment.py  password_reset_token.py  post.py  tag.py  user.py
blog/backend/repositories/: auth_repository.py  category_repository.py  comment_repository.py  post_repository.py  tag_repository.py  user_repository.py
blog/backend/routers/: posts.py  users.py
blog/backend/schemas/: auth.py  categories.py  comments.py  posts.py  tags.py  users.py
blog/backend/services/: category_service.py  comment_service.py  post_service.py  tag_service.py  user_service.py
blog/backend/templates/: password_reset.html
blog/frontend/: index.html  package-lock.json  package.json
blog/frontend/src/: App.tsx  index.css  main.tsx
blog/frontend/src/components/: Layout.tsx
blog/frontend/src/contexts/: AuthContext.tsx
blog/frontend/src/lib/: api.ts
blog/frontend/src/pages/: Account.tsx  ForgotPassword.tsx  Home.tsx  Login.tsx  NotFound.tsx  PostDetail.tsx  Register.tsx  ResetPassword.tsx  UserPosts.tsx
blog/frontend/src/types/: api.ts
blog/routers/: posts.py  users.py
blog/templates/: account.html  home.html  layout.html  post.html
