[project]
name = "blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosmtplib>=5.1.2",
    "aiosqlite>=0.22.1",
    "fastapi[standard]>=0.139.0",
    "greenlet>=3.5.3",
    "pillow>=12.3.0",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.2",
    "pyjwt[crypto]>=2.13.0",
    "sqlalchemy>=2.0.51",
]
[tool.ruff]
# Standardize line length to 88 characters 
line-length = 88

# Explicitly target Python 3.14 to ensure modern syntax rules apply
target-version = "py314"

# Select exactly which rule sets Ruff should enforce
[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "B", "UP", "SIM"
]
# Add E501 here to kill the highlighting
ignore = ["E501"]

[tool.ruff.format]
# Enforce standard double quotes for all strings
quote-style = "double"
# Indent with spaces, not tabs
indent-style = "space"
